Remove token from reset-password; accept otp+newPassword; update Swagger/openapi
